// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line breaking after filepath with errors  1`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[called readline.clearLine(process.stdout)]]
function foo() {}",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  2`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[called readline.clearLine(process.stdout)]]
",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  3`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "Checking formatting...
invalid-1.js
invalid-2.js
invalid-2.unknown
valid-1.js
[[called readline.clearLine(process.stdout)]]
All matched files use Prettier code style!",
  "write": [],
}
`;

exports[`Line breaking after filepath with errors  4`] = `
{
  "stderr": "[error] invalid-1.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] invalid-2.js: SyntaxError: Unexpected token (1:8)
[error] > 1 | foo (+-) bar
[error]     |        ^
[error]   2 |
[error] No parser could be inferred for file "<cli>/syntax-errors/invalid-2.unknown".",
  "stdout": "invalid-1.js
invalid-2.js
invalid-2.unknown
[[called readline.clearLine(process.stdout)]]
valid-1.js
[[called readline.clearLine(process.stdout)]]
valid-1.js 0ms (unchanged)",
  "write": [],
}
`;
